--- a/index.html
+++ b/index.html
@@ -2,4 +2,13 @@
 layout: default
 title: test title
 ---
-<p>Hello world!</p>
+<p> 11 Hello world!</p>
+
+<p>My post list:</p>
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
